--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Freddie AI</title>
-    <link rel="stylesheet" href="/Webpage/src/style.css">
+    <link rel="stylesheet" href="/Webpage/style.css">
     <link rel="shortcut icon" href="/Webpage/Assets/logo.png" type="image/x-icon">
 </head>
 <body>
